linking fixes, and potential mobile spacing

--- a/style.css
+++ b/style.css
@@ -1498,6 +1498,7 @@ body {
 	.subheader-text {
 		font-size: 1rem;
 		padding: 30px 20px 0;
+		margin-bottom: 1.5rem;
 	}
 
 	/* Cards */
@@ -1851,6 +1852,11 @@ body {
 	}
 
 	/* Cards*/
+
+	.card-left {
+		min-width: 60px;
+	}
+
 	.review-card {
 		width: 100%;
 		margin-bottom: 15px;
